yages/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: yages
  name: yages
  namespace: grpc-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yages
  template:
    metadata:
      labels:
        app: yages
    spec:
      containers:
      - name: grpcsrv
        image: docker.io/dsatya6/yages:0.1.0
        ports:
        - containerPort: 9000
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: yages
  name: yages
  namespace: grpc-demo
  annotations:
    projectcontour.io/upstream-protocol.h2c: grpc
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9000
  selector:
    app: yages
