yages/yages_clusterip_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: yages
  name: yages
  namespace: grpc-demo
  annotations:
    projectcontour.io/upstream-protocol.h2c: "9000"
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9000
  selector:
    app: yages
