yages/yages_clusterip_service2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: yages
  name: yages
  namespace: grpc-demo
  annotations:
    projectcontour.io/upstream-protocol.h2c: "9000"
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-internal: "false"
    kubernetes.io/ingress.allow-http: "false"
    external-dns.alpha.kubernetes.io/ttl: '60'
    nginx.org/proxy-body-size: "10m"
    nginx.org/client-body-buffer-size: "256k"
    nginx.org/redirect-to-https: "false"
    nginx.org/proxy-buffering: "false"
    nginx.org/ssl-redirect: "false"
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: grpc
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: '120'
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9000
  selector:
    app: yages
