yages/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yages
  namespace: grpc-demo
  annotations:
    ingress.kubernetes.io/rewrite-target: "/"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host:
    http:
      paths:
      - backend:
          service:
            name: yages
            port:
              number: 9000
        path: /direct
        pathType: Prefix
      # - path: /ambassador
      #   backend:
      #     serviceName: ambassador
      #     servicePort: 8877
