yages/yages-nginx-grpc2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yages-nginx-grpc-ingress
  namespace: grpc-demo
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: GRPC
    nginx.ingress.kubernetes.io/grpc-backend: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: 600s
    nginx.ingress.kubernetes.io/proxy-buffer-size: 16k
    nginx.ingress.kubernetes.io/proxy-buffers: "8"
    nginx.ingress.kubernetes.io/client-body-buffer-size: 8m    
spec:
  ingressClassName: nginx
  rules:
  - host: a5ff9bc794c9c412798924a990b33791-7c4fb9dc4b1b492e.elb.us-west-2.amazonaws.com
    http:
      paths:
      - backend:
          service:
            name: yages
            port:
              number: 80
        path: /
        pathType: Prefix
